<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gozmanvictor.linear.MainActivity"
    >


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark"
        >
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relativelayout"
        android:layout_marginBottom="0dp"
        android:paddingBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/resturant2"
            android:scaleType="centerCrop"
            android:background="#000"/>



        <TextView
            android:id="@+id/myImageViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/myImageView"
            android:layout_alignRight="@id/myImageView"
            android:layout_alignLeft="@id/myImageView"
            android:layout_alignBottom="@id/myImageView"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/welcomeText"
            android:fontFamily="roboton"
            android:textStyle="bold"
            android:textColor="#fff" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/myImageView"
            android:layout_marginLeft="40dp"
            android:paddingBottom="5dp"
            android:text="@string/food_delivery"
            android:gravity="center"
            android:fontFamily="roboton"
            android:textStyle="bold"
            android:textColor="#fff"
            />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/getfood"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:paddingTop="5dp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello we are Vicfood, your new premin delivery service. We know you are alway busy. So let's take care of that, we are really good at it. we promise!"
            android:paddingLeft="8dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_weight="0.55"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="365days/year. "
                android:textColor="#000"/>
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:text="@string/duration" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ready in 20minuites"
                android:textColor="#000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Food delivered in 20minuites" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100% organic."
                android:textColor="#000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vegetables raised naturally. It's Healthy for your body" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="horizontal"
     >


        <ImageView
            android:id="@+id/food2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:layout_weight="2"
            android:src="@drawable/rice2" />

        <ImageView
            android:id="@+id/food3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:layout_weight="2"
            android:src="@drawable/rice3" />
        <ImageView
            android:id="@+id/food"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:layout_weight="2"
            android:src="@drawable/rice" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:layout_weight="2"
            android:src="@drawable/rice4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="I'm Hungry"
            android:layout_marginRight="16dp"
            android:padding="10dp"
            android:shape="rectangle"
            android:background="@drawable/roud_btn"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/btn_no_backgroun"
            android:text="show more!"
            android:textColor="#e67e22" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#808080"
        android:paddingBottom="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:paddingLeft="8dp"
                android:src="@android:drawable/ic_dialog_email" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/contact_us"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:src="@android:drawable/ic_menu_call" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_marginLeft="20dp"
                android:text="@string/call_us"
                android:textColor="#fff" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
